src/test/deca/context/valid/LE/useMethodinMain.deca
// Description:
//    test les methods dans le main
//
// Resultats:
//    
//
// Historique:
//    cree le 19/01/2022

class A {
    
    int ajoute(int x){
        x = x +1;
        return x;
    }
}

{
    int x = 5;
    A y = new A();
    x = y.ajoute(x);
}