src/test/deca/context/invalid/LE/VoidReturn.deca
// Historique:
//    cree le 22/01/2022

class C1{
    void methode() {
        return 4 ;
    }
}

